snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.1-SNAPSHOT/error-0.1.1-20210823.154613-2.jar.sha1
3b01bbe05e940b48b92a90fa4074fdb8cadb8e9d